// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Build SSR Script Migration when SSR is configured should add "build:ssr" script when it does not exist 1`] = `
"{
  "dependencies": {
    "express": "^5.1.0"
  },
  "scripts": {
    "start": "ng serve",
    "build": "ng build",
    "build:ssr": "ng build"
  }
}"
`;

exports[`Build SSR Script Migration when SSR is configured should not modify package.json when "build:ssr" script already exists 1`] = `
"{
  "dependencies": {
    "express": "^5.1.0"
  },
  "scripts": {
    "start": "ng serve",
    "build": "ng build",
    "build:ssr": "ng build --configuration production"
  }
}"
`;

exports[`Build SSR Script Migration when SSR is not configured should skip migration when SSR is not configured in angular.json 1`] = `
"{
  "dependencies": {
    "express": "^5.1.0"
  },
  "scripts": {
    "start": "ng serve",
    "build": "ng build"
  }
}"
`;

exports[`Build SSR Script Migration when SSR is not configured should skip migration when server.ts file does not exist 1`] = `
"{
  "dependencies": {
    "express": "^5.1.0"
  },
  "scripts": {
    "start": "ng serve",
    "build": "ng build"
  }
}"
`;
